manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sentry
  namespace: sentry
  labels:
    name: sentry
spec:
  ports:
  - name: webhook
    port: 443
  selector:
    name: sentry 
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sentry
  namespace: sentry
  labels:
    name: sentry
spec:
  replicas: 1
  template:
    metadata:
      name: sentry 
      labels:
        name: sentry
    spec:
      containers:
        - name: webhook
          image: jasonrichardsmith/sentry:0.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 500Mi
              cpu: 300m
            requests:
              memory: 500Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
            - name: config
              mountPath: /config.yaml
              subPath: config.yaml
              readOnly: true
          readinessProbe:
            httpGet:
              path: /healthz
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 1
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: webhook-certs
          secret:
            secretName: sentry
        - name: config
          configMap:
            name: sentry-config
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: sentry
webhooks:
  - name: sentry.jasonrichardsmith.org
    clientConfig:
      service:
        name: sentry
        namespace: sentry
        path: "/"
      caBundle: "${CA_BUNDLE}"
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
